--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   computer: ^3.2.0
   provider: ^6.0.0
   dotted_border: ^2.0.0+2
+  # flutter_launcher_icons: ^0.9.2
   # get_it: ^7.2.0
   flutter:
     sdk: flutter
@@ -79,7 +80,27 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Alchemy
+      fonts:
+        - asset: fonts/alchemy-symbols/alchemy-symbols.ttf
+    - family: NotoSansSymbols
+      fonts:
+        - asset: fonts/NotoSansSymbols-Regular.ttf
+    - family: NotoSansSymbols-Black
+      fonts:
+        - asset: fonts/NotoSansSymbols-Black.ttf
+    - family: NotoSansSymbols2
+      fonts:
+        - asset: fonts/NotoSansSymbols2-Regular.ttf
+    - family: NotoSans
+      fonts:
+        - asset: fonts/NotoSans-Regular.ttf
+        - asset: fonts/NotoSans-Italic.ttf
+          style: italic
+    - family: NotoEmoji
+      fonts:
+        - asset: fonts/NotoEmoji-Regular.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
